tests/baselines/reference/invalidSplice.errors.txt
invalidSplice.ts(1,25): error TS2345: Argument of type '4' is not assignable to parameter of type 'never'.


==== invalidSplice.ts (1 errors) ====
    var arr = [].splice(0,3,4,5);
                            ~
!!! error TS2345: Argument of type '4' is not assignable to parameter of type 'never'.